--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,4 +21,4 @@ jobs:
       - name: Run tests
         run: |
           export PYTHONPATH="$(ls *.whl):${PYTHONPATH}"
-          python -m pytest src/my_project
+          python -m pytest
