--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -15,7 +15,7 @@ jobs:
           python-version: '3.9'
       - name: Install dependencies
         run: |
-          python -m pip install build pytest
+          python -m pip install build pytest pandas
       - name: Build sdist
         run: python -m build --wheel --outdir .
       - name: Run tests
